@@ -1,0 +1,57 @@
+# BEGIN PLOT /alphasdependence/
+XLabel=$\alpha_s$
+YLabel=quality
+LogY=0
+XMin=0.7
+XMax=1.59
+LegendXPos=0.68
+# END PLOT
+
+# BEGIN HISTOGRAM /alphasdependence/
+ConnectBins=0
+ConnectGaps=0
+ErrorBars=1
+# END HISTOGRAM
+
+# BEGIN PLOT /alphasdependence/I
+Title=$I_{1/2}$
+YMin=0
+YMax=0.301
+# END PLOT
+
+# BEGIN PLOT /alphasdependence/I2
+Title=$I_{1/2}"$
+YMin=0
+YMax=0.401
+# END PLOT
+
+# BEGIN PLOT /alphasdependence/grej20
+Title=$g_{\rm rej}_{20}$
+YMin=0.85
+YMax=1.01
+# END PLOT
+
+# BEGIN PLOT /alphasdependence/grej50
+Title=$g^{\rm rej}_{50}$
+YMin=0.75
+YMax=1.01
+# END PLOT
+
+# BEGIN PLOT /alphasdependence/qrej20
+Title=$q^{\rm rej}_{20}$
+YMin=0.85
+YMax=1.01
+# END PLOT
+
+# BEGIN PLOT /alphasdependence/qrej50
+Title=$q^{\rm rej}_{50}$
+YMin=0.75
+YMax=1.01
+# END PLOT
+
+# BEGIN PLOT /alphasdependence/srej
+Title=$s^{\rm rej}$
+YMin=0.6
+YMax=0.801
+# END PLOT
+
